--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div>
-            <div style="text-align: center;"><img src="images/wenshu.jpg"></div>
+            <div style="text-align: center;"><img src="wenshu.jpg"></div>
             <div style="margin-left: 1em;">
                 <p><b>服务范围：</b></p>
                 <p><b>联系人：位女士</b></p>
