--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
             <h3 style="text-align: center;">UCC国际洗衣</h3>
             <div style="text-align: center;"><img src="wenshu.jpg"></div>
             <div style="margin-left: 1em;">
-                <p><b>服务范围：</b></p>
+                <p><b>服务范围：承接各类服装干洗，水洗，皮具护理，家居窗帘清洗，欢迎咨询</b></p>
                 <p><b>联系人：位女士</b></p>
                 <p><b>联系电话：18571143758</b></p>
-                <p><b>地址：</b></p>  
+                <p><b>地址：仙桃市沙嘴街道十一墩社区肖湾新街东7巷8号</b></p>  
             </div>
         </div>
     </body>
